--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-# ?????? ??
+# database setting
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/board
 spring.datasource.username=root
 spring.datasource.password=1243
 
-# ?????? ?? ?? ??
+# hibernate ddl auto setting
 spring.jpa.hibernate.ddl-auto=update
 
-# jpa ?? ?? ??
+# jpa query show
 spring.jpa.show-sql=true
