--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 # jpa query show
 spring.jpa.show-sql=true
+
+# devtools restart setting
+spring.devtools.restart.enabled=true
+logging.level.org.springframework.boot.devtools.restart=DEBUG
