--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.show-sql=true
 # devtools restart setting
 spring.devtools.restart.enabled=true
 logging.level.org.springframework.boot.devtools.restart=DEBUG
+
+# properties include setting
+spring.profiles.include=secret
